--- a/ZeiterfassungPierburg/Views/Produktivität/Create.cshtml
+++ b/ZeiterfassungPierburg/Views/Produktivität/Create.cshtml
@@ -6,7 +6,7 @@
 <section class="content container-fluid">
     <h3>Produktivität ausrechnen</h3>
 
-    <div class="box box-info">
+    <div class="box">
         <div class="box-body">
             <div class="form-horizontal">
 
