--- a/ZeiterfassungPierburg/Views/Home/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Home/Index.cshtml
@@ -5,6 +5,10 @@
     Layout = "~/Views/Shared/_LayoutPublic.cshtml";
 }
 
+@{
+    // get the model
+    var d = ViewData.Model;
+}
 <link href="~/Content/Chart.css" rel="stylesheet" />
 
 <!-- Typewriter for fun only -->
@@ -42,7 +46,7 @@
                     <div class="small-box bg-aqua">
                         <div class="inner">
                             <h3>
-                                @ViewBag.MitarbeiterAnzahl
+                                @d.MitarbeiterAnzahl
                             </h3>
                             <p>Mitarbeiter</p>
                         </div>
@@ -55,7 +59,7 @@
                     <div class="small-box bg-green">
                         <div class="inner">
                             <h3>
-                                @ViewBag.Produktionsanlagen
+                                @d.Produktionsanlagen
                             </h3>
                             <p>Produktionsanlagen</p>
                         </div>
@@ -70,12 +74,11 @@
                     <div class="small-box bg-yellow">
                         <div class="inner">
                             <h3>
-                                @ViewBag.Fertigungsteile
+                                @d.Fertigungsteile
                             </h3>
 
                             <p>Fertigungsteile</p>
                         </div>
-
                         <a href="~/Fertigungsteil/Index" class="small-box-footer">zur Tabelle gehen <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
@@ -84,7 +87,7 @@
                     <!-- small box -->
                     <div class="small-box bg-red">
                         <div class="inner">
-                            <h3> @ViewBag.Zeiterfassungen</h3>
+                            <h3> @d.ZeiterfassungenAnzahl</h3>
                             <p>Zeiterfassungen</p>
                         </div>
                         <a href="~/MitarbeiterInSchicht" class="small-box-footer">zur Tabelle gehen <i class="fa fa-arrow-circle-right"></i></a>
@@ -149,25 +152,26 @@
                     </div>
                     <div class="col-sm-12">
                         <div class="clearfix">
-                            <h5><span id="day0"></span><span class="pull-right"><span class="label label-warning"> @ViewBag.StückeToday </span></span></h5>
+                            <h5><span id="day0"></span><span class="pull-right"><span class="label label-warning"> @d.StückeToday </span></span></h5>
                         </div>
                         <div class="clearfix">
-                            <h5><span id="day1"></span><span class="pull-right"><span class="label label-warning"> @ViewBag.StückeMinusOneDay </span></span></h5>
+                            <h5><span id="day1"></span><span class="pull-right"><span class="label label-warning"> @d.StückeMinusOneDay </span></span></h5>
                         </div>
                         <div class="clearfix">
-                            <h5><span id="day2"></span><span class="pull-right"><span class="label label-warning"> @ViewBag.StückeMinusTwoDays </span></span></h5>
+                            <h5>
+                                <span id="day2"></span><span class="pull-right"><span class="label label-warning">@d.StückeMinusTwoDays</span></span></h5>
                         </div>
                         <div class="clearfix">
-                            <h5><span id="day3"></span><span class="pull-right"><span class="label label-warning"> @ViewBag.StückeMinusThreeDays</span> </span></h5>
+                            <h5><span id="day3"></span><span class="pull-right"><span class="label label-warning"> @d.StückeMinusThreeDays</span> </span></h5>
                         </div>
                         <div class="clearfix">
-                            <h5><span id="day4"></span> <span class="pull-right"><span class="label label-warning"> @ViewBag.StückeMinusFourDays </span></span></h5>
+                            <h5><span id="day4"></span> <span class="pull-right"><span class="label label-warning"> @d.StückeMinusFourDays </span></span></h5>
                         </div>
                         <div class="clearfix">
-                            <h5><span id="day5"></span><span class="pull-right"> <span class="label label-warning"> @ViewBag.StückeMinusFiveDays </span></span></h5>
+                            <h5><span id="day5"></span><span class="pull-right"> <span class="label label-warning"> @d.StückeMinusFiveDays </span></span></h5>
                         </div>
                         <div class="clearfix">
-                            <h5><span id="day6"></span><span class="pull-right"> <span class="label label-warning"> @ViewBag.StückeMinusSixDays</span> </span></h5>
+                            <h5><span id="day6"></span><span class="pull-right"> <span class="label label-warning"> @d.StückeMinusSixDays</span> </span></h5>
                         </div>
 
                     </div>
@@ -182,7 +186,10 @@
     <script src="~/Scripts/Chart.js"></script>
     <script>
 
-        var monthsDictionary = @Html.Raw(Json.Encode(ViewBag.ProduktivitätLast12Months));
+
+        function loadProduktivitätLast12Months() {
+
+            var monthsDictionary = @Html.Raw(Json.Encode(d.ProduktivitätLast12Months));
         var months = [];
         var values = [];
 
@@ -223,6 +230,7 @@
                 }
             }
         });
+        }
 
         $(document).ready(function () {
 
@@ -234,6 +242,7 @@
             weekday[4] = "Donnerstag";
             weekday[5] = "Freitag";
             weekday[6] = "Samstag";
+
 
         var i;
         for (i = 0; i < 7; i++) {
@@ -250,7 +259,7 @@
             document.getElementById("day"+i).innerHTML = a +", "+ d + "." + m + ".     ";
         }
             var html = '';
-                            var dictionary = @Html.Raw(Json.Encode(ViewBag.ProduktivitätBerechnungProBandLastMonth));
+                            var dictionary = @Html.Raw(Json.Encode(d.ProduktivitätBerechnungProBandLastMonth));
                             for(var key in dictionary ){
                                 var value = dictionary[key];
 
@@ -282,17 +291,16 @@
 
             // Maschinen Produktivität Berechnung
             var htmlMaschinen = '';
-            var dictionaryMaschinen = @Html.Raw(Json.Encode(ViewBag.ProduktivitätBerechnungProMaschineLastMonth));
+            var dictionaryMaschinen = @Html.Raw(Json.Encode(d.ProduktivitätBerechnungProMaschineLastMonth));
 
             for (var key in dictionaryMaschinen ){
                 var value = dictionaryMaschinen[key];
-
 
                 if (!Number.isNaN(value)) {
                     // if a number gets returned, show the number and round it off
                     htmlMaschinen = htmlMaschinen + ` <div class="clearfix">
                             <span class="pull-left">`+ key + `</span>
-                            <small class="pull-right">`+ value.toFixed(2) + `%</small> 
+                            <small class="pull-right">`+ value.toFixed(2) + `%</small>
                         </div>
                         <div class="progress xs">
                             <div class="progress-bar progress-bar-green" style="width: `+ value + `%;"></div>
@@ -310,7 +318,9 @@
             }
             var r = document.getElementById("productivityMaschinen");
             r.innerHTML = htmlMaschinen;
-    });
+        });
+
+        setTimeout("loadProduktivitätLast12Months();", 0);
 
         // display German date - just for fun
         function getDate() {
@@ -326,5 +336,6 @@
             document.getElementById('datumsausgabe').textContent += text;
         }
         getDate();
+
     </script>
 }
