--- a/ZeiterfassungPierburg/Views/Shared/_LayoutPublic.cshtml
+++ b/ZeiterfassungPierburg/Views/Shared/_LayoutPublic.cshtml
@@ -72,7 +72,7 @@
                     <ul class="sidebar-menu" data-widget="tree">
                         <li class="active treeview menu-open">
                         <li class="treeview">
-                            <a href="#">
+                            <a href="">
                                 <i class="fa fa-upload" aria-hidden="true"></i>
                                 <span>Neue Zeiterfassung</span>
                                 <span class="pull-right-container">
